RESOLVED FIXED112112
REGRESSION(r145482): It broke 33 jsc tests and zillion layout tests on all platform
https://bugs.webkit.org/show_bug.cgi?id=112112
Summary REGRESSION(r145482): It broke 33 jsc tests and zillion layout tests on all pl...
Attachments
rollout (3.84 KB, patch)
2013-03-12 01:04 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2013-03-12 01:04:20 PDT
Oliver Hunt
Comment 2 2013-03-12 01:17:16 PDT
Comment on attachment 192662 [details] rollout wtf? My bad
WebKit Review Bot
Comment 3 2013-03-12 01:55:55 PDT
Comment on attachment 192662 [details] rollout Clearing flags on attachment: 192662 Committed r145500: <http://trac.webkit.org/changeset/145500>
WebKit Review Bot
Comment 4 2013-03-12 01:55:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.