REGRESSION(r145482): It broke 33 jsc tests and zillion layout tests on all platform https://bugs.webkit.org/show_bug.cgi?id=112112

Reviewed by Oliver Hunt.

Rolling out https://trac.webkit.org/changeset/145482 to unbreak the bots.

* runtime/JSStringJoiner.cpp:
(JSC::JSStringJoiner::build):
* runtime/JSStringJoiner.h:
(JSStringJoiner):
(JSC::JSStringJoiner::JSStringJoiner):
(JSC::JSStringJoiner::append):


Canonical link: https://commits.webkit.org/130433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145500 268f45cc-cd09-0410-ab3c-d52691b4dbfc