Source/JavaScriptCore/runtime/JSStringJoiner.h
@@ -46,13 +46,14 @@ private:
     String m_separator;
     Vector<String> m_strings;
 
-    Checked<unsigned, RecordOverflow> m_accumulatedStringsLength;
+    unsigned m_cumulatedStringsLength;
     bool m_isValid;
     bool m_is8Bits;
 };
 
 inline JSStringJoiner::JSStringJoiner(const String& separator, size_t stringCount)
     : m_separator(separator)
+    , m_cumulatedStringsLength(0)
     , m_isValid(true)
     , m_is8Bits(m_separator.is8Bit())
 {
@@ -65,9 +66,9 @@ inline void JSStringJoiner::append(const String& str)
     if (!m_isValid)
         return;
 
-    m_strings.append(str);
+    m_strings.uncheckedAppend(str);
     if (!str.isNull()) {
-        m_accumulatedStringsLength += str.length();
+        m_cumulatedStringsLength += str.length();
         m_is8Bits = m_is8Bits && str.is8Bit();
     }
 }
